--- a/contact-de.html
+++ b/contact-de.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <a href="index-de.html">Startseite</a>
+        <a href="index.html">Startseite</a>
         <a href="about-me-de.html">Über mich</a>
         <a href="professional-experience-de.html">Berufserfahrung</a>
         <a href="studies-and-schools-graduated-de.html">Studium und abgeschlossene Schulen</a>
