--- a/professional-experience-de.html
+++ b/professional-experience-de.html
@@ -66,7 +66,7 @@
         <br>
         <br>
         <br>
-
+    <div class="container">
         <div class="image-container">
             <img class="image" src="images/2019-08-09-17-35-18.jpg" alt="Foto in Villa Giosi Beschreibung">
             <div class="text">
@@ -91,11 +91,13 @@
                 </ul>
             </div>
         </div>
+    </div>
 
         <br>
         <br>
         <br>
 
+    <div class="container">
         <div class="image-container">
             <img class="image" src="images/IMG-20190319-WA0005.jpg" alt="Foto in Castel Cantacusino Beschreibung">
             <div class="text">
@@ -121,11 +123,13 @@
                 </ul>
             </div>
         </div>
+    </div>
 
         <br>
         <br>
         <br>
 
+    <div class="container">
         <div class="image-container">
             <img class="image" src="images/IMG-20180805-WA0005.jpg" alt="Foto in Dracula Beschreibung">
             <div class="text">
@@ -150,11 +154,13 @@
                 </ul>
             </div>
         </div>
+    </div>
 
         <br>
         <br>
         <br>
 
+    <div class="container">
         <div class="image-container">
             <img class="image" src="images/Salata mentolata cu pepene galben (3).jpg" alt="Foto in Matrioska Beschreibung">
             <div class="text">
@@ -179,11 +185,13 @@
                 </ul>
             </div>
         </div>
+    </div>
 
         <br>
         <br>
         <br>
 
+    <div class="container">
         <div class="image-container">
             <img class="image" src="images/Lacrimi_si_Sfinti_-_355_Saramura_de_Pescari_Vechi.jpg" alt="Foto in Lacrimi si Sfinti Beschreibung">
             <div class="text">
@@ -208,11 +216,12 @@
                 </ul>
             </div>
         </div>
-
+    </div>
         <br>
         <br>
         <br>
 
+    <div class="container">
         <div class="image-container">
             <img class="image" src="images/cuptor pizza.jpg" alt="Foto in Pizzeria Vitan Beschreibung">
             <div class="text">
@@ -238,11 +247,13 @@
                 </ul>
             </div>
         </div>
+    </div>
 
         <br>
         <br>
         <br>
 
+    <div class="container">
         <div class="image-container">
             <img class="image" src="images/IMG-20201106-WA0004.jpg" alt="Foto in Panificio Dorigati Beschreibung">
             <div class="text">
@@ -268,11 +279,13 @@
                 </ul>
             </div>
         </div>
+    </div>
 
         <br>
         <br>
         <br>
 
+    <div class="container">
         <div class="image-container">
             <img class="image" src="images/Macarons Galaxy.jpg" alt="Foto in Patiseria Dall'Omo Beschreibung">
             <div class="text">
@@ -299,11 +312,13 @@
                 </ul>
             </div>
         </div>
+    </div>
 
         <br>
         <br>
         <br>
 
+    <div class="container">
         <div class="image-container">
             <img class="image" src="images/IMG-20180510-WA0006.jpg" alt="Foto in La Radu Beschreibung">
             <div class="text">
@@ -329,6 +344,7 @@
                 </ul>
             </div>
         </div>
+    </div>
         </div>
         </div>
 
