--- a/studies-and-schools-graduated-de.html
+++ b/studies-and-schools-graduated-de.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+L8<!DOCTYPE html>
 <html lang="de">
 <head>
     <meta charset="UTF-8">
@@ -27,7 +27,7 @@
     <a href="about-me-de.html">Über mich</a>
     <a href="professional-experience-de.html">Berufserfahrung</a>
     <a href="studies-and-schools-graduated-de.html">Studium und abgeschlossene Schulen</a>
-    <a href="contactDe.html">Kontakt</a>
+    <a href="contact-de.html">Kontakt</a>
     <a href="my-work-de.html">Meine Arbeit</a>
     <h2><strong>Lebenslauf</strong></h2>
   </header>
