--- a/my-work-de.html
+++ b/my-work-de.html
@@ -68,7 +68,7 @@
         <a href="about-me-de.html">Über mich</a>
         <a href="professional-experience-de.html">Berufserfahrung</a>
         <a href="studies-and-schools-graduated-de.html">Studium und abgeschlossene Schulen</a>
-        <a href="contact-de.html.">Kontakt</a>
+        <a href="contact-de.html">Kontakt</a>
         <a href="my-work-de.html">Meine Arbeit</a>
         <h2><strong>Lebenslauf</strong></h2>
     </header>
