--- a/my-work-de.html
+++ b/my-work-de.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html lang="de">
 <head>
-  
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  
-    <title>Dokument</title>
     <link rel="stylesheet" href="styles.css">
+    <title>Dokument</title>
+</head>
 
     <style>
         ul {
