--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     </div>
 
     <footer>
-        <p class="centered">© 2023 Andrei-Costea Niculae. All rights reserved.</p>
+        <p class="centered">© 2023 Andrei-Costea Niculae. Alle Rechte vorbehalten.</p>
     </footer>
 
     <script>
