--- a/professional-experience-de.html
+++ b/professional-experience-de.html
@@ -338,7 +338,7 @@
         <br>
 
         <footer>
-            <p class="centered">© 2023 Andrei-Costea Niculae. All rights reserved.</p>
+            <p class="centered">© 2023 Andrei-Costea Niculae. Alle Rechte vorbehalten.</p>
         </footer>
 
         <script>
