--- a/studies-and-schools-graduated-de.html
+++ b/studies-and-schools-graduated-de.html
@@ -90,7 +90,7 @@ L8<!DOCTYPE html>
     <br>
 
     <footer>
-        <p class="centered">© 2023 Andrei-Costea Niculae. All rights reserved.</p>
+        <p class="centered">© 2023 Andrei-Costea Niculae. Alle Rechte vorbehalten.</p>
     </footer>
 
     <script>
