--- a/professional-experience-de.html
+++ b/professional-experience-de.html
@@ -40,7 +40,7 @@
             <div class="image-container">
                 <img class="image" src="images/farfurie peste.jpg" alt="Foto in Kafi-Beschreibung">
                 <div class="text">
-                    <h3>Koch, November 2019 - heute, Restaurant "Kafi Pfyfouter", Bern, Schweiz</h3>
+                    <h3>Chef, November 2019 - heute, Restaurant "Kafi Pfyfouter", Bern, Schweiz</h3>
                     <ul>
                         <li>Planung und Entwicklung von Menüs unter Berücksichtigung der Saison, verfügbarer Zutaten und Kundenpräferenzen.</li>
                         <li>Erstellung und Erprobung neuer Rezepte, Anpassung an aktuelle gastronomische Trends.</li>
@@ -69,7 +69,7 @@
         <div class="image-container">
             <img class="image" src="images/2019-08-09-17-35-18.jpg" alt="Foto in Villa Giosi Beschreibung">
             <div class="text">
-                <h3>Koch, April 2019 - Oktober 2019, Restaurant "Villa Giosi", Lago di Tenno, Italien</h3>
+                <h3>Chef, April 2019 - Oktober 2019, Restaurant "Villa Giosi", Lago di Tenno, Italien</h3>
                 <ul>
                     <li>Planung und Entwicklung von Menüs unter Berücksichtigung der Saison, verfügbarer Zutaten und Kundenpräferenzen.</li>
                     <li>Erstellung und Erprobung neuer Rezepte, Anpassung an aktuelle gastronomische Trends.</li>
@@ -128,7 +128,7 @@
         <div class="image-container">
             <img class="image" src="images/IMG-20180805-WA0005.jpg" alt="Foto in Dracula Beschreibung">
             <div class="text">
-                <h3>Koch, Juni 2018 - August 2018, Restaurant "IDracula", Bukarest, Rumänien</h3>
+                <h3>Chef, Juni 2018 - August 2018, Restaurant "IDracula", Bukarest, Rumänien</h3>
                 <ul>
                     <li>Planung und Entwicklung von Menüs unter Berücksichtigung der Saison, verfügbarer Zutaten und Kundenpräferenzen.</li>
                     <li>Erstellung und Erprobung neuer Rezepte, Anpassung an aktuelle gastronomische Trends.</li>
@@ -157,7 +157,7 @@
         <div class="image-container">
             <img class="image" src="images/Salata mentolata cu pepene galben (3).jpg" alt="Foto in Matrioska Beschreibung">
             <div class="text">
-                <h3>Koch, April 2017 - Januar 2019, Restaurant "Matrioska", Bukarest, Rumänien</h3>
+                <h3>Chef, April 2017 - Januar 2019, Restaurant "Matrioska", Bukarest, Rumänien</h3>
                 <ul>
                     <li>Planung und Entwicklung von Menüs unter Berücksichtigung der Saison, verfügbarer Zutaten und Kundenpräferenzen.</li>
                     <li>Erstellung und Erprobung neuer Rezepte, Anpassung an aktuelle gastronomische Trends.</li>
@@ -186,7 +186,7 @@
         <div class="image-container">
             <img class="image" src="images/Lacrimi_si_Sfinti_-_355_Saramura_de_Pescari_Vechi.jpg" alt="Foto in Lacrimi si Sfinti Beschreibung">
             <div class="text">
-                <h3>Koch, März 2013 - April 2017, Restaurant "Lacrimi si Sfinti", Bukarest, Rumänien</h3>
+                <h3>Chef, März 2013 - April 2017, Restaurant "Lacrimi si Sfinti", Bukarest, Rumänien</h3>
                 <ul>
                     <li>Planung und Entwicklung von Menüs unter Berücksichtigung der Saison, verfügbarer Zutaten und Kundenpräferenzen.</li>
                     <li>Erstellung und Erprobung neuer Rezepte, Anpassung an aktuelle gastronomische Trends.</li>
